<resources>
    <string name="app_name">Licenta01</string>
    <string name="welcome_login">Bine ati venit!</string>
    <string name="login_email">email</string>
    <string name="login_password">parola</string>
    <string name="empty_string" />
    <string name="tv_login_welcome">Bine ati venit!</string>
    <string name="tiet_login_mail">Email</string>
    <string name="tiet_login_password">Password</string>
    <string name="save_user_and_password">Salveaza Utilizator si Parola</string>
    <string name="btn_login_login">Login</string>
    <string name="tv_login_accountneed">Nu ai cont?</string>
    <string name="btn_login_register">Inregistreaza-te</string>
    <string name="register_bar_title">Inregistreaza-te</string>
    <string name="add_photo">Adauga poza</string>
    <string name="profile_picture_string">Poza de profil</string>
    <string name="register_firstName">Nume</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Numar de telefon</string>
    <string name="register_password">Parola</string>
    <string name="register_birthday">Ziua de nastere</string>
    <string name="male_register">Sex Masculin</string>
    <string name="female_register">Sex Feminin</string>
    <string name="register_registerbtn">Inregistreaza-te</string>
    <string name="email_register">email</string>
    <string name="password_register">parola</string>
    <string name="registerActivityMessage">Utilizator deja inregistrat</string>
    <string name="empy_filds_error">Campuri necompletate</string>
    <string name="regex_only_text_matches">^[a-zA-Z\\s]+</string>
    <string name="incorrect_name_error">Nume incorect</string>
    <string name="reges_phone_matches">[0-9]+$</string>
    <string name="incorrect_phone_error">Numar de telefon incorect</string>
    <string name="regex_email_matches">^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$</string>
    <string name="incorrect_email_error">Email incorect</string>
    <string name="invalid_date_error">Data invalida</string>
    <string name="no_profile_pic">Fara poza</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_title">Ai grija de animalul tau</string>
    <string name="nav_header_subtitle">petcareapp@android.com</string>
    <string name="welcome_back_main">Buna ziua!</string>
    <string name="user_name_content_main">Nume</string>
    <string name="user_phone_number">Numar telefon</string>
    <string name="email_adress">Email</string>
    <string name="auction_main_pic">Poza principala</string>
    <string name="main_home_title">Categorii</string>
    <string name="walk_dog_pic">walking dog</string>
    <string name="menu_walk_dog">Plimbari</string>
    <string name="animal_food">animal food</string>
    <string name="menu_animal_food">Mese</string>
    <string name="veterinar_pic">Veterinar</string>
    <string name="menu_veterinar">Vizita la veterinar</string>
    <string name="petshop">petshop</string>
    <string name="menu_petshop">Pet shop</string>
    <string name="log_out_pic">logouy</string>
    <string name="log_out_nav">Delogare</string>
    <string name="mainIntenterror">A aparut o eroare</string>
    <string name="navigation_drawer_open">Afiseaza meniu</string>
    <string name="navigation_drawer_close">Inchide meniu</string>
    <string name="plimbari_main">Programare plimbari</string>
    <string name="seteaza_alarma_plimbare">Seteaza Alarma Plimbare</string>
    <string name="seteaza_alarma_masa">Seteaza alarma pentru masa</string>
    <string name="register_numeEvent">Nume eveniment</string>
    <string name="register_calendar">Data eveniment</string>
    <string name="register_Event">Salvati eveniment</string>
    <string name="string_date_add">%1$d/%2$d/%3$d</string>
    <string name="statistica">Statistica</string>
    <string name="eveniment">Evenimente</string>
    <string name="zileramase">Mai sunt 2 zile pana la urmatorul eveniment: Vaccin</string>
    <string name="statisticaBar">Programarile tale</string>
    <string name="adeveniment">+</string>
    <string name="back">Meniu principal</string>
    <string name="statEurope">Statistica Europeana</string>
    <string name="statUtil">Statistica Utilizatorului</string>
    <string name="register_tip">Tip</string>
    <string name="register_animalName">Nume Animal</string>
    <string name="rasa">Rasa</string>
    <string name="register_rasa">Rasa</string>
    <string name="profil_animal">Profilul animalului de companie</string>
    <string name="profil_animal2">Profilul animalului tau</string>
    <string name="register_registeranimalbtn">Inregistreaza animalul</string>
    <string name="register_bar_title2">Inregistreaza-ti animalul</string>
</resources>