<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<item android:title="@string/main_home_title">
    <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_plimbari"
                android:icon="@drawable/ic_walk_dog_foreground"
                android:contentDescription="@string/walk_dog_pic"
                android:title="@string/menu_walk_dog" />
            <item
                android:id="@+id/nav_mancare"
                android:icon="@drawable/ic__foodnew_foreground"
                android:contentDescription="@string/animal_food"
                android:title="@string/menu_animal_food" />
            <item
                android:id="@+id/nav_veterinar"
                android:icon="@drawable/ic_veterinarpaw_foreground"
                android:contentDescription="@string/veterinar_pic"
                android:title="@string/menu_veterinar" />
<!--            <item-->
<!--                android:id="@+id/nav_eveniment"-->
<!--                android:icon="@drawable/ic_shop_foreground"-->
<!--                android:contentDescription="@string/petshop"-->
<!--                android:title="@string/menu_petshop" />-->
            <item android:title="@string/statistica"
                android:id="@+id/nav_statistica"
                android:icon="@drawable/ic_baseline_bar_chart_24"
                android:contentDescription="@string/statistica"
                ></item>
<!--            <item android:title="@string/statistica"-->
<!--                android:id="@+id/nav_barchart"-->
<!--                android:icon="@drawable/ic_baseline_bar_chart_24"-->
<!--                android:contentDescription="@string/statisticaBar"-->
<!--                ></item>-->
        </group>
    </menu>
</item>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profil_animal"
                    android:icon="@mipmap/ic_launcher_dog_foreground"
                    android:contentDescription="@string/profil_animal"
                    android:title="@string/profil_animal2" />
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/ic_log_out_svg"
                    android:contentDescription="@string/log_out_pic"
                    android:title="@string/log_out_nav" />
            </group>


</menu>